--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "scripts": {
     "deploy": "npm run build && wrangler pages deploy",
     "build": "remix vite:build",
+    "build-cloudflare": "npm install -g pnpm && pnpm i && pnpm build"
     "dev": "remix vite:dev",
     "test": "vitest --run",
     "test:watch": "vitest",
