--- a/package.json
+++ b/package.json
@@ -89,6 +89,7 @@
     "node-fetch": "^3.3.2",
     "pnpm": "^9.4.0",
     "prettier": "^3.3.2",
+    "sass-embedded": "^1.79.4",
     "typescript": "^5.5.2",
     "unified": "^11.0.5",
     "unocss": "^0.61.3",
